Bug 1556846 - [10.15] Crash in [@ mozilla::plugins::PluginUtilsOSX::SetProcessName] r=spohl a=RyanVM

Allow limited access to the proc_pidinfo() syscall from the Mac utility process sandbox.

Differential Revision: https://phabricator.services.mozilla.com/D37533